# lite-graphics

./: .gitignore  Cargo.toml  LICENSE-MIT
examples/: arcs.rs  circles.rs  filled_circles.rs  gradient_rects.rs  h_v_lines.rs  lines.rs  pies.rs  rects.rs  round_rects.rs
src/: color.rs  draw.rs  lib.rs
src/window/: mod.rs  wayland.rs  x11.rs
