[package]
name = "lite-graphics"
version = "0.1.0"
edition = "2021"

[dependencies]


[target.'cfg(all(unix, not(any(target_os = "redox", target_family = "wasm", target_os = "android", target_os = "ios", target_os = "macos"))))'.dependencies]
x11rb = { version = "0.13", optional = true, features = ["image"] }

[features]
default = ["window"]
window = ["x11rb"]
