[package]
name = "lite-graphics"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]


[target.'cfg(all(unix, not(any(target_os = "redox", target_family = "wasm", target_os = "android", target_os = "ios", target_os = "macos"))))'.dependencies]
x11rb = { version = "0.13", optional = true, features = ["image"] }
wayland-client = { version = "0.31", optional = true }
wayland-protocols = { version = "0.32", optional = true, features = ["client"] }
nix = { version = "0.29", features = ["mman", "fs"] }

[features]
default = ["window"]
window = ["x11rb", "wayland"]
wayland = ["wayland-client", "wayland-protocols"]
